[gd_scene load_steps=38 format=2]

[ext_resource path="res://Skills/Chain.tscn" type="PackedScene" id=1]
[ext_resource path="res://Skills/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Game_UI/Game_UI_2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/2cd43b_2fbcdebf10894ccdbbd22f5642338f6c_mv2.png" type="Texture" id=4]
[ext_resource path="res://Skills/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Heal_particles.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Player_sprite_sheet.png" type="Texture" id=12]
[ext_resource path="res://Skills/Groundslam.gd" type="Script" id=15]
[ext_resource path="res://Player/PlayerHitbox.gd" type="Script" id=16]
[ext_resource path="res://Player/Player.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 60.581 )

[sub_resource type="Animation" id=2]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 48, 49, 50, 51 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Att_hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Att_hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.52
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43, 44, 45, 46 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Att_hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 77, 78, 79, 80 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 107 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 71, 72, 73, 74 ]
}

[sub_resource type="Animation" id=8]
length = 0.35
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ground_slam_hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]
length = 0.24
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 61, 59, 59 ]
}

[sub_resource type="Animation" id=10]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 90, 91, 92 ]
}

[sub_resource type="Animation" id=11]
length = 2.56
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 26, 27, 26, 27, 26, 27, 26, 27, 26, 27, 26 ]
}

[sub_resource type="Animation" id=12]
length = 0.27
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 58, 59, 60, 61, 62, 63 ]
}

[sub_resource type="Animation" id=13]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84, 85, 86, 87 ]
}

[sub_resource type="Animation" id=14]
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 88, 89, 88, 89, 88, 89, 88, 89, 88, 89, 88, 89, 88, 89 ]
}

[sub_resource type="Animation" id=15]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 93, 94, 95, 100 ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 104, 105, 106, 107 ]
}

[sub_resource type="Animation" id=17]
length = 1.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 3, 4, 5, 6, 7, 8, 3, 4, 5 ]
}

[sub_resource type="Animation" id=18]
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 111, 112, 111, 112, 111, 112, 116 ]
}

[sub_resource type="Animation" id=19]
length = 0.35
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Att_hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=20]
length = 0.35
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 31, 32, 33, 34 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Att_hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=21]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 38, 39, 38, 39, 38, 39, 38, 39 ]
}

[sub_resource type="Animation" id=22]
resource_name = "hurt_wait"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 90, 91, 92 ]
}

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 29.5326, 53.3176 )

[sub_resource type="CapsuleShape2D" id=24]
radius = 77.6895
height = 24.7495

[sub_resource type="RectangleShape2D" id=25]

[sub_resource type="RectangleShape2D" id=26]

[sub_resource type="Animation" id=27]
resource_name = "New Anim"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.411765 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.411765 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
script = ExtResource( 17 )

[node name="Colli1" type="CollisionShape2D" parent="."]
position = Vector2( -0.191345, -5.3984 )
shape = SubResource( 1 )

[node name="Colli2" type="CollisionShape2D" parent="."]
position = Vector2( -0.187378, 24.8841 )
scale = Vector2( 1, 0.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Player Idle"
anims/Attack2 = SubResource( 2 )
anims/Attack3 = SubResource( 3 )
anims/Attackt1 = SubResource( 4 )
anims/Crouch = SubResource( 5 )
"anims/Double Jump" = SubResource( 6 )
anims/Grab = SubResource( 7 )
anims/Ground_slam = SubResource( 8 )
anims/Hooking = SubResource( 9 )
anims/Hurt = SubResource( 10 )
"anims/New Anim" = SubResource( 11 )
"anims/Player Casting" = SubResource( 12 )
"anims/Player Die" = SubResource( 13 )
"anims/Player Falling" = SubResource( 14 )
"anims/Player Idle" = SubResource( 15 )
"anims/Player Jumping" = SubResource( 16 )
"anims/Player Running" = SubResource( 17 )
anims/Slide = SubResource( 18 )
anims/air1 = SubResource( 19 )
anims/air2 = SubResource( 20 )
anims/air3 = SubResource( 21 )
anims/hurt_wait = SubResource( 22 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 34, -4.589 )

[node name="Chain" parent="Position2D" instance=ExtResource( 1 )]

[node name="Att_hitbox" parent="Position2D" instance=ExtResource( 5 )]
scale = Vector2( 1.5, 1 )
collision_layer = 8
collision_mask = 32
script = ExtResource( 16 )

[node name="CollisionShape2D" parent="Position2D/Att_hitbox" index="0"]
shape = SubResource( 23 )
disabled = true

[node name="RightWall1" type="RayCast2D" parent="."]
position = Vector2( 10, -62.823 )
rotation = -1.57079
scale = Vector2( 1, 0.2 )
enabled = true

[node name="RightWall2" type="RayCast2D" parent="."]
position = Vector2( 10, -30 )
rotation = -1.57079
scale = Vector2( 1, 0.2 )
enabled = true

[node name="LeftWall1" type="RayCast2D" parent="."]
position = Vector2( -10, -63.003 )
rotation = 1.57079
scale = Vector2( 1, 0.2 )
enabled = true

[node name="LeftWall2" type="RayCast2D" parent="."]
position = Vector2( -10, -30 )
rotation = 1.5708
scale = Vector2( 1, 0.2 )
enabled = true

[node name="Attack_reset" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Check_above" type="RayCast2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 0, 17.1711 )
rotation = -3.14159

[node name="Slide_reset" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Cast_reset" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Hurt_reset" type="Timer" parent="."]
one_shot = true

[node name="Final" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0.00012207, -0.647095 )
scale = Vector2( 5.87614, 1.26451 )
collision_mask = 257

[node name="Final2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 9.70618, 0 )
scale = Vector2( 5.87614, 1.26451 )
collision_mask = 257

[node name="Final3" type="RayCast2D" parent="."]
visible = false
position = Vector2( -9.70587, -3.05176e-05 )
scale = Vector2( 5.87614, 1.26451 )
collision_mask = 257

[node name="Grab1" type="RayCast2D" parent="."]
position = Vector2( 0, -75 )
rotation = -1.5708
scale = Vector2( 1, 0.5 )
enabled = true

[node name="Grab2" type="RayCast2D" parent="."]
position = Vector2( 0, -75 )
rotation = 1.5708
scale = Vector2( 1, 0.5 )
enabled = true

[node name="Ground_slam_hitbox" parent="." instance=ExtResource( 5 )]
collision_layer = 8
collision_mask = 32
script = ExtResource( 15 )

[node name="CollisionShape2D" parent="Ground_slam_hitbox" index="0"]
visible = false
rotation = 1.5708
shape = SubResource( 24 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -7.28308 )
scale = Vector2( 2.86, 5.3 )
collision_layer = 16
collision_mask = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 25 )

[node name="Bounce" type="Area2D" parent="."]
position = Vector2( -1.68365, 46.8629 )
scale = Vector2( 2.2, 1 )
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounce"]
shape = SubResource( 26 )

[node name="Example5" parent="." instance=ExtResource( 6 )]
position = Vector2( 0.626343, -4.30766 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.418701, -11.5197 )
scale = Vector2( 3.6374, 3.92665 )
texture = ExtResource( 12 )
hframes = 140
frame = 57

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
limit_top = -190
limit_bottom = 367

[node name="check_for_end1" type="RayCast2D" parent="."]
position = Vector2( 80, 36 )
enabled = true

[node name="check_for_end3" type="RayCast2D" parent="."]
position = Vector2( 35, 36 )
enabled = true

[node name="check_for_end2" type="RayCast2D" parent="."]
position = Vector2( -80, 36 )
enabled = true

[node name="check_for_end4" type="RayCast2D" parent="."]
position = Vector2( -35, 36 )
enabled = true

[node name="Hook" type="Timer" parent="."]

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( -4, 0 )
rotation = 6.28319
scale = Vector2( 3, 3 )
z_as_relative = false
texture = ExtResource( 4 )
mode = 2

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 27 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="Attack_reset" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Slide_reset" to="." method="_on_Slide_reset_timeout"]
[connection signal="timeout" from="Cast_reset" to="." method="_on_Cast_reset_timeout"]
[connection signal="timeout" from="Hurt_reset" to="." method="_on_Hurt_reset_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Hook" to="." method="_on_Hook_timeout"]

[editable path="Position2D/Att_hitbox"]

[editable path="Ground_slam_hitbox"]

[editable path="Hurtbox"]
